--- a/src/index.css
+++ b/src/index.css
@@ -51,16 +51,14 @@ h2 {
 }
 
 .modal {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  border: none;
   border-radius: 6px;
-  background-color: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  width: 30rem;
   padding: 1rem;
   text-align: center;
-  width: 30rem;
-  z-index: 10;
-  position: fixed;
-  top: 20vh;
-  left: calc(50% - 15rem);
+  z-index: 1;
 }
 
 .backdrop {
